Fix sub tabs area alignment in respect to parent tab panel

--- a/aem-webapp/src/main/webapp/resources/css/react/components/default/tabs.css
+++ b/aem-webapp/src/main/webapp/resources/css/react/components/default/tabs.css
@@ -1,7 +1,6 @@
 ol.tabs-default {
     height: 2em;
     list-style: none;
-    margin: 2;
     padding: 0;
 }
 
@@ -57,7 +56,6 @@ ol.tabs-default li.current a {
 ol.tabs-default-level-1 {
     height: 2em;
     list-style: none;
-    margin: 2;
     padding: 0;
 }
 
@@ -100,7 +98,12 @@ ol.tabs-default-level-1 li.current a {
 }
 
 .tabs-default-level-1-panel-selected {
+
     border: #C0C0C0 solid 1px;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+
     background: #E5E5E5;
  	width: 100%;
 	height: 500px;
